# obsidian_mcp_server

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  LICENSE  README.md  TODO.md  cli.py  openai.yaml  pyproject.toml  requirements.txt  road_map_for_data_analysit.md  s -ExecutionPolicy RemoteSigned) ; (& ecodingpythonobsidian_mcp_server_test.venvScriptsActivate.ps1)  stderr.txt  tasks.md  test_connection.py  test_leading_slash_fix.py
.continue/mcpServers/: new-mcp-server.yaml
data/: graph.json
dev/: description.md  final_product.md  tasks.md  word_limit_fix.md
docs/: api.md  architecture.md  files.md  indexer.md  mcp_server.md  setup.md  troubleshooting.md
scripts/: monitor_disk_temp.ps1  temp_dashboard.py
src/data/: note_paths.json  title_to_path.json
src/obsidian_ai/: __init__.py  _index_utils.py  chroma_store.py  chunker.py  clustering.py  config.py  dashboard.py  entity_extractor.py  entity_relations.py  entity_resolver.py  entity_store.py  eval.py  extract_entities_pipeline.py  extractor.py  frontmatter.py  graph_store.py  indexer.py  keyword_search.py  llm_client.py  logger.py  mcp_server.py  obsidian_client.py  pipelines.py  ranker.py  summarize_pipeline.py  summarizer.py  summary_store.py  todos.py  wiki_links.py
src/obsidian_ai/providers/: __init__.py  base.py  ollama.py  openai_provider.py
src/obsidian_ai/tools/: __init__.py  _shared.py  _tool_base.py  admin.py  ask.py  (+10 more)
tests/: test_chroma_store.py  test_clustering.py  test_config.py  test_dashboard.py  test_entity_relations.py  test_entity_store.py  test_eval.py  test_frontmatter.py  test_graph_store.py  test_indexer.py  test_keyword_search.py  test_llm_client.py  test_logger.py  test_mcp_server.py  test_modules.py  test_obsidian_client.py  test_pipelines.py  test_ranker.py  test_summary_store.py  test_todos.py  test_tools_comprehensive.py  test_wiki_links.py
